fixed text align issue

--- a/src/App.css
+++ b/src/App.css
@@ -823,6 +823,8 @@ hr {
 .comment p {
   font-family: "Source Serif Pro", serif !important;
   font-size: 1.33em;
+  text-align: left !important;
+  width: 100%;
 }
 .comment .user-info {
   display: flex;
